Code was refactored